deploy/k8s/30-ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feloxi-ingress
  namespace: core
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: feloxi-ip  # Change to your static IP name
    networking.gke.io/managed-certificates: feloxi-managed-cert
    networking.gke.io/v1beta1.FrontendConfig: feloxi-frontend-config
spec:
  rules:
    - host: feloxi.example.com              # Change to your domain
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: feloxi-web
                port:
                  number: 80
